Fix the openstax navbar spacing styling
[#182761992]

--- a/src/components/openstax/book/style.module.less
+++ b/src/components/openstax/book/style.module.less
@@ -18,3 +18,8 @@
   margin-bottom: 0.5rem;
   border-bottom: 2px solid @gray-400;
 }
+
+.navChapTitle {
+  font-size: 16px;
+  color: @gray-700;
+}
